--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello, World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Waliot — fleet management system. Waliot — система мониторинга транспорта.">
+  <title>Waliot — Fleet Management System</title>
+</head>
+<body>
+  <h1>Waliot — Fleet Management System</h1>
+  
+  <p><strong>English:</strong>
+    Waliot is a fleet management platform that provides a full cycle of digital transport management. 
+    Waliot as software belongs to the class of satellite-based fleet management systems and is designed to track the location, control the movement and technical condition of vehicles.
+  </p>
+
+  <hr/>
+
+  <p><strong>Русский:</strong> 
+    Waliot — это платформа управления автопарком, обеспечивающая полный цикл цифрового управления транспортом.
+    Waliot как программное обеспечение относится к классу систем спутникового мониторинга транспорта и предназначено для отслеживания местоположения, контроля движения и технического состояния транспортных средств.
+  </p>
+</body>
+</html>
