github pages waliot

--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Waliot — fleet management system. Waliot — система мониторинга транспорта.">
-  <title>Waliot — Fleet Management System</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Waliot — Fleet Management System | Валиот — Система Мониторинга Транспорта">
+    <meta name="keywords" content="waliot, валиот, gps, glonass, глонасс, мониторинг, monitoring, транспорт, vehicle, мониторинг транспорта, vehicle monitoring, контроль, management, автопарк, fleet, контроль автопарка, fleet management, система мониторинга транспорта, fleet management system, навигация, navigation, трекер, tracker, контроль, control, топливо, fuel, контроль топлива, fuel control">
+    <meta name="author" content="Waliot">
+    <meta name="robots" content="index, follow">
+    <title>Waliot — Fleet Management System | Валиот — Система Мониторинга Транспорта</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Waliot — Fleet Management System">
+    <meta property="og:description" content="Waliot is a satellite-based fleet management and vehicle tracking system.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://waliot.com">
+    <meta property="og:image" content="https://wiki.waliot.com/open-graph/waliot-open-graph-image.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Waliot — Fleet Management System">
+    <meta name="twitter:description" content="Waliot is a satellite-based fleet management and vehicle tracking system.">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "SoftwareApplication",
+            "name": "Waliot",
+            "applicationCategory": "BusinessApplication",
+            "operatingSystem": "Web",
+            "description": "Waliot is a satellite-based fleet management and vehicle tracking system.",
+            "url": "https://waliot.com",
+            "inLanguage": "en",
+            "author": {
+                "@type": "Organization",
+                "name": "Waliot"
+            }
+        }
+    </script>
 </head>
+
 <body>
-  <h1>Waliot — Fleet Management System</h1>
-  
-  <p><strong>English:</strong>
-    Waliot is a fleet management platform that provides a full cycle of digital transport management. 
-    Waliot as software belongs to the class of satellite-based fleet management systems and is designed to track the location, control the movement and technical condition of vehicles.
-  </p>
+<h1>Waliot — Fleet Management System</h1>
 
-  <hr/>
+<p><strong>English:</strong><br>
+    Waliot is a fleet management platform that provides a full cycle of digital transport control.
+    The system belongs to the class of satellite-based GPS/GLONASS fleet tracking solutions and is designed to monitor location, fuel consumption, movement, and technical condition of vehicles.
+    Waliot is used in logistics, agriculture, construction, and public transport companies across Russia.
+</p>
 
-  <p><strong>Русский:</strong> 
-    Waliot — это платформа управления автопарком, обеспечивающая полный цикл цифрового управления транспортом.
-    Waliot как программное обеспечение относится к классу систем спутникового мониторинга транспорта и предназначено для отслеживания местоположения, контроля движения и технического состояния транспортных средств.
-  </p>
+<hr/>
+
+<p lang="ru"><strong>Русский:</strong><br>
+    Waliot — это платформа управления автопарком, обеспечивающая полный цикл цифрового контроля транспорта.
+    Программное обеспечение относится к классу спутниковых систем мониторинга GPS/ГЛОНАСС и предназначено для отслеживания местоположения, расхода топлива, движения и технического состояния автотранспорта.
+    Решение используется в логистике, сельском хозяйстве, строительстве и муниципальном транспорте по всей России.
+</p>
+
+<p>
+    Official site: <a href="https://waliot.com">https://waliot.com</a><br>
+    Documentation: <a href="https://wiki.waliot.com">https://wiki.waliot.com</a>
+</p>
 </body>
 </html>
