Update waliot github page

--- a/index.html
+++ b/index.html
@@ -44,23 +44,32 @@
 <body>
 <h1>Waliot — Fleet Management System</h1>
 
+<p>
+    Official site: <a href="https://waliot.com">https://waliot.com</a><br>
+    Documentation: <a href="https://wiki.waliot.com">https://wiki.waliot.com</a>
+</p>
+
 <p><strong>English:</strong><br>
     Waliot is a fleet management platform that provides a full cycle of digital transport control.
-    The system belongs to the class of satellite-based GPS/GLONASS fleet tracking solutions and is designed to monitor location, fuel consumption, movement, and technical condition of vehicles.
-    Waliot is used in logistics, agriculture, construction, and public transport companies across Russia.
+    The system belongs to the class of GPS | GLONASS satellite-based fleet tracking solutions and is designed to monitor location, fuel consumption, movement, and technical condition of vehicles.
+    Waliot is used in logistics, agriculture, construction, and public transport companies.
+</p>
+<p lang="ru">
+    Waliot is created and supported by First Monitoring Company LLC, a developer of software in the field of transport telematics and satellite monitoring.
+    The company specializes in creating solutions for digital fleet management, fuel control, logistics, and transport data analytics.
 </p>
 
 <hr/>
 
 <p lang="ru"><strong>Русский:</strong><br>
-    Waliot — это платформа управления автопарком, обеспечивающая полный цикл цифрового контроля транспорта.
-    Программное обеспечение относится к классу спутниковых систем мониторинга GPS/ГЛОНАСС и предназначено для отслеживания местоположения, расхода топлива, движения и технического состояния автотранспорта.
-    Решение используется в логистике, сельском хозяйстве, строительстве и муниципальном транспорте по всей России.
+    Валиот — это платформа управления автопарком, обеспечивающая полный цикл цифрового контроля транспорта.
+    Программное обеспечение относится к классу спутниковых систем мониторинга на базе GPS | ГЛОНАСС и предназначено для отслеживания местоположения, расхода топлива, движения и технического состояния автотранспорта.
+    Решение используется в логистике, сельском хозяйстве, строительстве и муниципальном транспорте.
+</p>
+<p lang="ru">
+    Платформа Waliot создается и поддерживается ООО «Первая Мониторинговая Компания» — разработчиком программного обеспечения в области транспортной телематики и спутникового мониторинга.
+    Компания специализируется на создании решений для цифрового управления автопарками, контроля топлива, логистики и аналитики транспортных данных.
 </p>
 
-<p>
-    Official site: <a href="https://waliot.com">https://waliot.com</a><br>
-    Documentation: <a href="https://wiki.waliot.com">https://wiki.waliot.com</a>
-</p>
 </body>
 </html>
